--- a/ba.cabal
+++ b/ba.cabal
@@ -18,3 +18,4 @@ library
                      , containers >= 0.5 && < 0.6
   hs-source-dirs:      src
   default-language:    Haskell2010
+  ghc-options:         -Wall
