--- a/ba.cabal
+++ b/ba.cabal
@@ -9,7 +9,7 @@ author:              Ricky Elrod
 maintainer:          ricky@elrod.me
 copyright:           (c) 2014 Ricky Elrod
 category:            Bioinformatics
-build-type:          Simple
+build-type:          Custom
 cabal-version:       >=1.10
 
 library
@@ -23,3 +23,14 @@ library
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall
+
+
+test-suite doctests
+  default-language:    Haskell2010
+  type:                exitcode-stdio-1.0
+  main-is:             doctests.hs
+  hs-source-dirs:      tests
+  build-depends:       base
+                     , directory
+                     , doctest
+                     , filepath
