--- a/ba.cabal
+++ b/ba.cabal
@@ -15,7 +15,9 @@ cabal-version:       >=1.10
 library
   exposed-modules:     Bio.Algorithm.Sequence
                      , Bio.Algorithm.Types
+                     , Bio.Algorithm.Types.DNA
                      , Bio.Algorithm.Types.RawSequence
+                     , Bio.Algorithm.Types.RNA
   build-depends:       base >= 4 && < 5
                      , bytestring >= 0.9 && < 0.12
                      , containers >= 0.4 && < 0.6
