--- a/ba.cabal
+++ b/ba.cabal
@@ -7,17 +7,13 @@ license:             BSD2
 license-file:        LICENSE
 author:              Ricky Elrod
 maintainer:          ricky@elrod.me
-copyright:           (c) 2014 Ricky Elrod
+copyright:           (c) 2017 Ricky Elrod
 category:            Bioinformatics
 build-type:          Custom
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Bio.Algorithm.Sequence
-                     , Bio.Algorithm.Types
-                     , Bio.Algorithm.Types.Protein
-                     , Bio.Algorithm.Types.RawSequence
-                     , Bio.Algorithm.Types.Sequence
+  exposed-modules:     Bio.Algorithm.Types
   build-depends:       base >= 4 && < 5
                      , bytestring >= 0.9 && < 0.12
                      , containers >= 0.4 && < 0.6
