--- a/ba.cabal
+++ b/ba.cabal
@@ -11,6 +11,7 @@ copyright:           (c) 2017 Ricky Elrod
 category:            Bioinformatics
 build-type:          Custom
 cabal-version:       >=1.10
+tested-with:         GHC == 7.8.4, GHC == 7.10.2, GHC == 8.0.2
 
 library
   exposed-modules:     Bio.Algorithm.Types
@@ -23,13 +24,12 @@ library
   default-language:    Haskell2010
   ghc-options:         -Wall
 
-
-test-suite doctests
-  default-language:    Haskell2010
-  type:                exitcode-stdio-1.0
-  main-is:             doctests.hs
-  hs-source-dirs:      tests
-  build-depends:       base
-                     , directory
-                     , doctest
-                     , filepath
+--test-suite doctests
+--  default-language:    Haskell2010
+--  type:                exitcode-stdio-1.0
+--  main-is:             doctests.hs
+--  hs-source-dirs:      tests
+--  build-depends:       base
+--                     , directory
+--                     , doctest
+--                     , filepath
