--- a/ba.cabal
+++ b/ba.cabal
@@ -20,6 +20,7 @@ library
                      , containers >= 0.4 && < 0.6
                      , lens >= 4 && < 5
                      , text >= 1 && < 2
+                     , semigroups >= 0.18 && < 1
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall
